<resources>
    <string name="app_name">FinalProject</string>
    <string name="nickname_hint">Enter your nickname</string>
    <string name="password_hint">Enter your password</string>
    <string name="sing_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="suggestion_text">Not registered?</string>
    <string name="avatar_image">avatar_image</string>
    <string name="profession_hint_text">What I do</string>
    <string name="search_view_hint">Search</string>
    <string name="content_desc">
        Hodor Hodor Hodor Hodor Hodor Hodor Hodor
        Hodor Hodor Hodor Hodor Hodor Hodor Hodor
        Hodor Hodor !Hodor Hodor Hodor ?!
        Hodor Hodor Hodor Hodor Hodor .
        Hodor .Hodor Hodor Hodor Hodor .
        Hodor Hodor Hodor Hodor .Hodor Hodor Hodor …Hodor Hodor Hodor Hodor Hodor Hodor Hodor
        Hodor Hodor Hodor Hodor Hodor Hodor Hodor
        Hodor Hodor !Hodor Hodor Hodor ?!
        Hodor Hodor Hodor Hodor Hodor .
        Hodor .Hodor Hodor Hodor Hodor .
        Hodor Hodor Hodor Hodor .Hodor Hodor Hodor …Hodor Hodor Hodor Hodor Hodor Hodor Hodor
        Hodor Hodor Hodor Hodor Hodor Hodor Hodor
        Hodor Hodor !Hodor Hodor Hodor ?!
        Hodor Hodor Hodor Hodor Hodor .
        Hodor .Hodor Hodor Hodor Hodor .
        Hodor Hodor Hodor Hodor .Hodor Hodor Hodor …Hodor Hodor Hodor Hodor Hodor Hodor Hodor
        Hodor Hodor Hodor Hodor Hodor Hodor Hodor
        Hodor Hodor !Hodor Hodor Hodor ?!
        Hodor Hodor Hodor Hodor Hodor .
        Hodor .Hodor Hodor Hodor Hodor .
        Hodor Hodor Hodor Hodor .Hodor Hodor Hodor …</string>
    <string name="todo">TODO</string>
    <string name="home">home</string>
    <string name="setting">setting</string>
    <string name="plus_button">Plus Button</string>
    <string name="home_button">Home Button</string>
    <string name="settings_button">Settings Button</string>
    <string name="profile_image_button">Profile Image Button</string>
    <string name="update">UPDATE</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="back_button">Back Button</string>
    <string name="nickname_hint_short">Your Nickname</string>
    <string name="message_hint">Message</string>
</resources>