<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationPage">

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="@dimen/avatar_image_size"
        android:layout_height="@dimen/avatar_image_size"
        android:layout_marginTop="@dimen/avatar_image_top_margin"
        android:contentDescription="@string/avatar_image"
        android:src="@drawable/avatar_image_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="@dimen/edit_text_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nickname_top_margin"
        android:inputType="textPersonName"
        android:hint="@string/nickname_hint"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border_edit_text"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="@dimen/vertical_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/edit_text_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/password_top_margin"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:gravity="center_horizontal"
        android:background="@drawable/rounded_border_edit_text"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="@dimen/vertical_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/profession"
        android:layout_width="@dimen/edit_text_size"
        android:layout_height="wrap_content"
        android:autofillHints="profession"
        android:background="@drawable/rounded_border_edit_text"
        android:gravity="center_horizontal"
        android:hint="@string/profession_hint_text"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="@dimen/vertical_padding"
        android:layout_marginTop="@dimen/profession_top_margin"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_button_top_margin"
        android:backgroundTint="@color/blue"
        android:fontFamily="sans-serif"
        android:text="@string/sing_up"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profession" />


</androidx.constraintlayout.widget.ConstraintLayout>