<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/vpg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimaryVariant"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_plus"
        app:tint="@color/white"
        android:contentDescription="@string/plus_button" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/white"
        app:hideOnScroll="true"
        app:fabAlignmentMode="center"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored">

        <ImageButton
            android:id="@+id/home"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_home"
            android:backgroundTint="@color/white"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/bottom_app_bar_icons_margin"
            android:contentDescription="@string/home_button"
            app:tint="@drawable/icon_color" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_settings"
            android:backgroundTint="@color/white"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/bottom_app_bar_icons_margin"
            android:contentDescription="@string/settings_button"
            app:tint="@drawable/icon_color" />

    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>