<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:backgroundTint="?attr/colorPrimaryVariant">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimaryVariant">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_background"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height"
                android:layout_gravity="bottom"
                app:layout_collapseMode="pin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_view_hint"
                    android:layout_marginHorizontal="@dimen/search_view_horizontal_margin"
                    android:layout_marginBottom="@dimen/search_view_bottom_margin"
                    app:hintTextColor="@color/transparent"
                    app:startIconDrawable="@drawable/ic_search"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/search"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/search_view_height"
                        android:background="@drawable/rounded_border_edit_text"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Theme.MyTextTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/content_desc" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimaryVariant"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_plus"
        app:tint="@color/white"
        android:contentDescription="@string/plus_button" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/white"
        app:hideOnScroll="true"
        app:fabAlignmentMode="center"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored">

        <ImageButton
            android:id="@+id/home"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_home"
            android:backgroundTint="@color/white"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/bottom_app_bar_icons_margin"
            android:contentDescription="@string/home_button"
            app:tint="@drawable/icon_color" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_settings"
            android:backgroundTint="@color/white"
            android:layout_gravity="end"
            android:layout_marginHorizontal="@dimen/bottom_app_bar_icons_margin"
            android:contentDescription="@string/settings_button"
            app:tint="@drawable/icon_color" />

    </com.google.android.material.bottomappbar.BottomAppBar>


</androidx.coordinatorlayout.widget.CoordinatorLayout>